--- a/backend/training/models/deployment/model/config.json
+++ b/backend/training/models/deployment/model/config.json
@@ -1,14 +1,28 @@
 {
-  "model_name": "Highlander AI",
-  "description": "Expert AI business consultant for media companies",
-  "max_length": 512,
-  "temperature": 0.7,
-  "specialized_knowledge": [
-    "AI implementation strategies",
-    "Media business operations",
-    "Digital transformation",
-    "ROI optimization"
+  "model_type": "gpt2",
+  "architectures": [
+    "GPT2LMHeadModel"
   ],
-  "conversation_style": "Professional, direct, actionable advice",
-  "memory_enabled": true
+  "vocab_size": 50257,
+  "n_positions": 1024,
+  "n_ctx": 1024,
+  "n_embd": 768,
+  "n_layer": 12,
+  "n_head": 12,
+  "activation_function": "gelu_new",
+  "resid_pdrop": 0.1,
+  "embd_pdrop": 0.1,
+  "attn_pdrop": 0.1,
+  "layer_norm_epsilon": 1e-05,
+  "initializer_range": 0.02,
+  "summary_type": "cls_index",
+  "summary_use_proj": true,
+  "summary_activation": null,
+  "summary_proj_to_labels": true,
+  "summary_first_dropout": 0.1,
+  "scale_attn_weights": true,
+  "use_cache": true,
+  "bos_token_id": 50256,
+  "eos_token_id": 50256,
+  "transformers_version": "4.21.0"
 }
