Add Hugging Face Hub integration and model documentation

--- a/.gitignore
+++ b/.gitignore
@@ -58,10 +58,11 @@ Thumbs.db
 *.h5
 *.hdf5
 
-# Training checkpoints and deployment
+# Training checkpoints
 backend/training/models/checkpoints/
-backend/training/models/deployment/
-backend/training/models/deployment/model/
+
+# Deployment model files (handled by Git LFS)
+# backend/training/models/deployment/model/
 
 # Training data and metadata
 backend/training/training_data/pdfs/*_metadata.json
